fix width for iframe on small screen

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -35,6 +35,9 @@
 		width: 80% !important;
 		max-width: 100vw !important;	
 	}
+	iframe {
+		width: 100% !important;
+	}
 }
 
 @media screen and (max-width: 581px) {
